--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "booking",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://billyPhan9x.githup.io/booking-website/",
+  "homepage": "https://billyphan9x.github.io/react-bookingwebsite",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
@@ -12,7 +12,6 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^2.28.0",
-    "gh-pages": "^4.0.0",
     "react": "^18.0.0",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.0.0",
@@ -45,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
