--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "booking",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://billyphan9x.github.io/react-bookingwebsite",
+  "homepage": "https://billyphan9x.github.io/booking-website",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
